titania/styles/prosilver/theme/common.css
/* ... */
#extratabs #extratabs-head a:hover {
	background-color: #627179;
	border-color: #627179;
	color: #FFFFFF;
}

.tab-panel {
	padding: 0 !important;
}

#screenshots-panel a.screenshot img, img.screenshot  {
	padding: 3px;
	border: 1px solid #A1A1A1;
	vertical-align: top;
	margin: 5px;
}

#screenshots-panel a.screenshot:hover img {
	border-color: #757575;
}

a.new-revision {
	background-color: #7FA3B9;
	padding: 3px;
	float: right;
	text-transform: uppercase;
	border: 1px solid #6C889A;
	margin-top: 5px;
	color: #FFFFFF;
}

a.new-revision:hover {
	text-decoration: none;
	background-color: #5E869F;
	border-color: #46667A;
}

/* Author Profile
--------------------------------------------- */
#author-profile .left-column {
	float: left;
	width: 200px;
	margin-right: 0;
}

#author-profile .right-column {
	float: none;
	width: auto;
	margin-left: 210px;
}

.no-avatar {
	background: url("{T_THEME_PATH}/images/no_avatar.gif") no-repeat 0 0;
	width: 118px;
	height: 17px;
	padding-top: 103px;
	margin: auto;
	color: #D8D8D7;
}

/* Listings
--------------------------------------------- */
.phpbb_versions {
	min-width: 80px;
}

.contribution-list-actions {
	padding-top: 9px;
}

#faqlist .topiclist dt {
	width: 80%;
}

dd.faq-tools {
	width: 13%;
	text-align: right;
	border: 0 !important;
}

dd.general {
	padding-left: 5px !important;
	padding-right: 5px !important;
	font-size: 1.1em;
}

dd.general img {
	vertical-align: middle;
}

#categories .forums dd.general {
	font-size: 1.2em;
}

#categories .content {
	font-size: 1.2em;
}

ul.simple li.header dt, ul.simple li.header dd {
	color: #000000;
	margin-bottom: 2px;
}

.container .cplist li.row {
	border-bottom: 1px solid #B5C1CB;
	border-top: 1px solid #F9F9F9;
}

.container dd.type {
	width: 15%;
	text-align: center;
	padding-left: 5px;
	padding-right: 5px;
}

.container dd.contrib-author {
	width: 20%;
	padding-left: 5px;
	padding-right: 5px;
}

.container .cplist dd.type, .container .cplist dd.contrib-author {
	font-size: 1.1em;
}

.container .forabg {
	background-image: none;
}

.revisions dt {
	width: 35% !important;
}

dd.contribution-phpbb-version {
	text-align: center;
	width: 15%;
}

dd.revision-version {
	width: 19%;
	text-align: center;
}

dd.revision-phpbb-version {
	text-align: center;
	width: 20%;
}

ul.topiclist dd.revision-actions {
	text-align: right;
	width: 8%;
	border-left: 0;
}

ul.topiclist dd.revision-status {
	text-align: center;
	width: 10%;
	border-left: 0;
}

dd.phpbb-version select {
	width: 100px;
}

dl.preview-select {
	padding-top: 15px;
	margin-bottom: -5px;
}

dt.set-preview {
	margin-left: 40px;
}

img.icon {
	float: right;
}

/* Rating Code */
ul.rating, ul.rated {
	list-style-type: none;
	display: inline;
}

ul.rating li, ul.rated li {
	display: inline;
	border: 0;
}

/* Soft deleted item */
.deleted {
	background-color: #FFFFFF;
	border: 1px solid #BC2A4D;
}

/* Manage sections
--------------------------------------------- */

/* Queue */
.queue-actions {
	background-color: #F1F4F5;
	width: 100%;
	list-style: none;
	display: block;
	float: left;
	clear: both;
	border-bottom: 1px solid #D4D6D7;
	font-size: 1.1em;
	font-family: Arial, Verdana, Helvetica, sans-serif;
	margin-top: 10px;
}

.queue-actions li {
	display: block;
	float: left;
	padding: 0 3px;
	border-right: 1px solid #FFF;
	border-left: 1px solid #D4D6D7;
	line-height: 2em;
}

.queue-actions li.first { border-left: 0; }
.queue-actions li.last 	{ border-right: 0; }

.queue-actions li.info {
	float: right;
	border: 0;
}

.queue-actions li a {
	color: #585858;
	padding-left: 22px;
	background-repeat: no-repeat;
	background-position: center left;
	position: relative;
	display: block;
	margin-top: 1px;
}

.queue-actions li div a {
	padding: 0 5px;
}

.queue-actions li a:hover {
	text-decoration: none;
	color: #1A2124;
}

.queue-actions img {
	vertical-align: middle;
}

.queue_progress 	{ background-image: url("{T_THEME_PATH}/images/icon_queue_progress.png"); }
.deny 				{ padding-left: 19px !important; background-image: url("{T_THEME_PATH}/images/icon_deny.gif"); }
.approve 			{ padding-left: 21px !important; background-image: url("{T_THEME_PATH}/images/icon_approve.gif"); }
.change_status		{ padding-left: 15px !important; background-image: url("{T_THEME_PATH}/images/icon_change_status.gif"); }
.repack 			{ padding-left: 17px !important; background-image: url("{T_THEME_PATH}/images/icon_repack.gif"); }
.misc				{ padding-left: 19px !important; background-image: url("{T_THEME_PATH}/images/icon_misc.gif"); }

.queue-actions div.subactions {
	position: absolute;
	z-index: 999;
	background-color: #F1F4F5;
	padding: 5px 0;
	border: 1px solid #D4D6D7;
	border-top: none;
	line-height: 1.6em;
	display: none;
}

.queue-actions div.subactions a {
	padding: 0 10px;
}

.queue-actions div.subactions a:hover {
	background-color: #FFF;
}

/* Attention */
#attention {
	border-bottom-style: dashed;
	border-bottom-width: 1px;
	padding-top: 5px;
}

#attention td {
	padding: 3px;
}

#attention .content {
	font-size: 1.3em;
	padding-bottom: 10px;
}

/* Categories */
#addcategory textarea {
	height: 185px;
}

/* General
--------------------------------------------- */
/* ColorBox adjustments; primarily switching control buttons to top */
#cboxLoadedContent {
	margin-top: 28px;
	margin-bottom: 0 !important;
}
	
#cboxLoadedContent h3 {
	top: 0;
	width: 100%;
	position: absolute;
}
	
#cboxNext, #cboxPrevious, #cboxClose, #cboxTitle, #cboxCurrent {
	top: 0;
	bottom: auto !important;
}

#cboxCurrent {
	top: 5px;
}

.dialog-options {
	text-align: center;
}

.hidden {
	display: none !important;
}

.successbox, .errorbox, .noticebox {
	padding: 0 10px;
	margin: 10px 0;
	color: #FFFFFF;
	text-align: center;
}

.errorbox span.corners-top , .successbox span.corners-top, .noticebox span.corners-top {
	margin: 0 -10px 5px -10px;
}

.errorbox span.corners-bottom , .successbox span.corners-bottom, .noticebox span.corners-bottom {
	margin: 5px -10px 0 -10px;
}

.success {
	color: #228822;
}
/* ... */

